Fix the quiz button link, add width of 100% to work description hovers, and fix spacing on the quiz banner

--- a/_patterns/sections/sections.css
+++ b/_patterns/sections/sections.css
@@ -155,6 +155,7 @@ video {
 }
 
 .work-hover {
+  width: 100%;
   background-color: rgba(0, 0, 0, .6);
   padding: 1rem;
   color: var(--color-secondary-light);
